# -ESP32-S3-

./: .gitignore  CMakeLists.txt  PINOUT.md  README.md  build_log.txt  build_output.txt  component.yml  flash_output.txt  idf_component.yml  lcdbasictest  monitor_log.txt  ppt_server.py  sdkconfig.defaults
PPT_solution/: CMakeLists.txt  README.md  sdkconfig.defaults
PPT_solution/main/: CMakeLists.txt  app_main.c
PPT_solution/python_server/: ppt_controller.py
audio_repair/: PROBLEM_ANALYSIS.md  README.md  app_main.cpp  get_token.py
components/: lv_conf.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  audio_es8311.c  audio_es8311.h  board_pin.h  icons.c  icons.h  lvgl_display.c  lvgl_display.h  lvgl_input.c  lvgl_input.h  lvgl_ui.c  lvgl_ui.h  ppt_controller.c  ppt_controller.h  test_audio.h  voice_chat.c  voice_chat.h
